# whiteboard

./: .gitignore  CMakeLists.txt  main.cpp
drawing_logic/include/: DrawableObject.h  canvaswidget.h  drawer.h
drawing_logic/src/: DrawableObject.cpp  canvaswidget.cpp  drawer.cpp
include/AppController/: AppController.h
include/DrawingLogic/: CanvasWidget.h  DrawableObject.h  Drawer.h
include/Shared/: Shared.h
include/UI/: MainWindow.h
include/io/Serialization/: Serialization.h
include/io/delta_CRDT/: CRDT.h  WhiteboardSession.h
io/serialization/include/: serialization.h
io/serialization/src/: serialization.cpp
src/AppController/: AppController.cpp
src/DrawingLogic/: CanvasWidget.cpp  DrawableObject.cpp  Drawer.cpp
src/UI/: MainWindow.cpp
src/io/Delta_CRDT/: CRDT.cpp  WhiteboardSession.cpp
src/io/Serialization/: Serialization.cpp
ui/include/: mainwindow.h
ui/src/: mainwindow.cpp
